display-results's overlap with the search area fixed.

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -102,7 +102,7 @@ input[type="search"]{
 
 #display-results, #display-works {
     width: $search-box-width;
-    margin: 0 10px;
+    margin: 30px 10px 0 10px;
     display: inline-block;
     
     .main {
